[gd_scene load_steps=3 format=3 uid="uid://cieawynmc40kt"]

[ext_resource type="Script" uid="uid://ccc3yjvt2ncy7" path="res://contexts/input_context/input_context.gd" id="1_38n7i"]
[ext_resource type="PackedScene" uid="uid://nncdcpu4q1wl" path="res://object_scenes/input_controller/input_controller.tscn" id="2_8emoe"]

[node name="InputContext" type="Node2D"]
script = ExtResource("1_38n7i")

[node name="InputController1" parent="." instance=ExtResource("2_8emoe")]

[node name="InputController2" parent="." instance=ExtResource("2_8emoe")]

[node name="InputController3" parent="." instance=ExtResource("2_8emoe")]

[node name="InputController4" parent="." instance=ExtResource("2_8emoe")]
